--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.4.0
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -36,6 +36,7 @@ dependencies:
   blur: ^3.0.0
   flutter_phoenix: ^1.0.0
   lottie: ^1.1.0
+  in_app_update: ^2.0.0
 
   mobx: ^2.0.1
   flutter_mobx: ^2.0.0
